apps/lab/linkding/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: linkding-https-redirect
  namespace: linkding
spec:
  redirectScheme:
    scheme: https
    permanent: true
